added new user registration

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -9,4 +9,8 @@
      {% csrf_token %}
      <p><input type="submit" value="Log-in"></p>
  </form>
+
+<p>Please, use the following form to log-in. If you don't have an
+account <a href="{% url "register" %}">register here</a></p>
+
 {% endblock %}
