added edit profile and and templates

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -18,4 +18,8 @@
      </form>
      <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
  </div>
+
+<p>Please, use the following form to log-in. If you don't have an
+account <a href="{% url 'register' %}">register here</a></p>
+
 {% endblock %}
