added messages to edit profile view

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -9,6 +9,7 @@
     </head>
     <body>
          <div id="header">
+
          <span class="logo">Shareit</span>
            {% if request.user.is_authenticated %}
 
@@ -39,6 +40,18 @@
              </span>
 
          </div>
+
+         {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li class="{{ message.tags }}">
+                    {{ message|safe }}
+                    <a href="#" class="close">✖</a>
+                    </li>
+                {% endfor %}
+            </ul>
+         {% endif %}
+
          <div id="content">
          {% block content %}
          {% endblock %}
