--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -17,9 +17,21 @@
          <p><input type="submit" value="Log-in"></p>
      </form>
      <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+     <p> <a href="{% url 'register' %}">Register here</a></p>
+
  </div>
 
-<p>Please, use the following form to log-in. If you don't have an
-account <a href="{% url 'register' %}">register here</a></p>
+<div class="social">
+<ul>
+    <li class="google"><a href="{% url 'social:begin' 'google-oauth2' %}">
+        Login with Google
+        </a></li>
+</ul>
+
+</div>
+
+
+
+
 
 {% endblock %}
