Creating image thumbnails using sorl-thumbnail

--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -6,7 +6,14 @@
 {% block content %}
 
 <h1>{{ image.title }}</h1>
- <img src="{{ image.image.url }}" class="image-detail">
+
+{% load thumbnail %}
+{% thumbnail image.image "300" as im %}
+ <a href="{{ image.image.url }}">
+ <img src="{{ im.url }}" class="image-detail">
+ </a>
+{% endthumbnail %}
+
 
     {% with total_likes=image.users_like.count %}
 
