--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -6,6 +6,7 @@
     <head>
      <title>{% block title %}{% endblock %}</title>
      <link rel="stylesheet" href="{% static 'css/base.css' %}" >
+
     </head>
     <body>
          <div id="header">
@@ -56,5 +57,47 @@
          {% block content %}
          {% endblock %}
          </div>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+     <script src=" http://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
+     <script>
+     var csrftoken = $.cookie('csrftoken');
+     function csrfSafeMethod(method) {
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+     }
+     $.ajaxSetup({beforeSend: function(xhr, settings) {
+         if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+         xhr.setRequestHeader("X-CSRFToken", csrftoken);}
+     }
+     });
+
+     $(document).ready(function(){
+         {% block domready %}
+          $('a.like').click(function(e){
+          e.preventDefault();
+          $.post('{% url "images:like" %}',
+             {
+             id: $(this).data('id'),
+             action: $(this).data('action')
+             },
+          function(data){
+             if (data['status'] == 'ok')
+             {
+             var previous_action = $('a.like').data('action');
+
+             // toggle data-action
+             $('a.like').data('action', previous_action == 'like' ? 'unlike' : 'like');
+             // toggle link text
+             $('a.like').text(previous_action == 'like' ? 'Unlike' : 'Like');
+            var previous_likes = parseInt($('span.count .total').
+            text());
+             $('span.count .total').text(previous_action == 'like' ?
+            previous_likes + 1 : previous_likes - 1);
+             }
+             }
+             );
+             });
+         {% endblock %}
+     });
+     </script>
     </body>
 </html>
